--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,9 @@
 @import url(breadcrumb.css);
 @import url(../accordeon/acc.css);
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Raleway", sans-serif;
 }
@@ -107,7 +111,7 @@ header .start__ul {
   color: white;
   gap: 40px;
   justify-content: center;
-  padding-top: 40px;
+  padding: 40px 20px 0;
   margin-bottom: 55px;
 }
 
@@ -180,6 +184,7 @@ header .start__ul {
   display: flex;
   justify-content: space-between;
   padding: 120px 0px;
+  flex-wrap: wrap;
 }
 
 .teachnumber2 {
@@ -395,4 +400,187 @@ header .start__ul {
 .footer2 span {
   display: flex;
   gap: 30px;
+}
+
+@media (max-width: 1100px) {
+  .right img {
+    display: none;
+    flex-basis: 0;
+  }
+  .right span {
+    display: none;
+    flex-basis: 0;
+  }
+  .left img {
+    display: none;
+    flex-basis: 0;
+  }
+  .teach {
+    padding: 0 2%;
+  }
+  .teachtext__right {
+    justify-content: center;
+  }
+  .choose {
+    padding: 0 2%;
+  }
+  .choose h1 {
+    font-size: 40px;
+    line-height: 1.3;
+  }
+  .courses {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .cta__text h1 {
+    padding-right: 20%;
+    font-size: 40px;
+    line-height: 1.3;
+  }
+  .cta__text h3 {
+    padding-right: 10%;
+  }
+  footer {
+    padding: 0 2%;
+  }
+}
+@media (max-width: 900px) {
+  .block2-left img {
+    width: 100%;
+  }
+  .cta {
+    background-size: 100%;
+    background-repeat: space;
+    margin-bottom: 0;
+  }
+  .cta__text {
+    padding-top: 10px;
+  }
+  .cta h3 {
+    max-width: 300px;
+  }
+  .cta__text .btn_y {
+    margin-top: 0;
+  }
+}
+@media (max-width: 800px) {
+  .cta h1 {
+    max-width: 300px;
+    flex-wrap: normal;
+  }
+  .cta__text {
+    padding-left: 44%;
+    gap: 2px;
+  }
+  .footer__right {
+    flex-wrap: wrap;
+  }
+  .footer__text {
+    gap: 1px;
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 700px) {
+  h1 {
+    font-size: 30px;
+    line-height: 1.1;
+  }
+  header {
+    padding-bottom: 40px;
+  }
+  header ul {
+    flex-wrap: wrap;
+  }
+  .header__body .middle h2 {
+    padding: 0;
+  }
+  .teachnumber {
+    padding: 40px 0 30px;
+  }
+  .teachtext {
+    flex-direction: column;
+    padding-bottom: 30px;
+  }
+  .teachtext__left {
+    align-items: center;
+    flex-basis: 0;
+  }
+  .block2 {
+    justify-content: center;
+    padding: 40px 0;
+  }
+  .block2__right {
+    text-align: center;
+    align-items: center;
+  }
+  .block2-left {
+    display: none;
+  }
+  .popular {
+    padding: 40px 0;
+  }
+  .cta {
+    padding-bottom: 0;
+  }
+  .cta__text {
+    padding-left: 50%;
+  }
+  .cta__text h1 {
+    font-size: 30px;
+    line-height: 1.1;
+  }
+  .footer__left {
+    padding: 0 5%;
+  }
+}
+@media (max-width: 600px) {
+  .popular h4 {
+    font-size: 18px;
+  }
+  .cta__text {
+    padding-left: 44%;
+    padding-top: 0;
+  }
+  .footer {
+    flex-direction: column;
+    gap: 40px;
+    padding-bottom: 0;
+  }
+  .footer__left {
+    flex-basis: 0;
+    gap: 10px;
+  }
+  .footer__right {
+    flex-basis: 0;
+    gap: 20px;
+  }
+  .footer__left ul {
+    padding: 0;
+  }
+}
+@media (max-width: 550px) {
+  .cta {
+    background: none;
+  }
+  .cta__text {
+    padding: 0;
+    gap: 20px;
+    text-align: center;
+    align-items: center;
+    width: -webkit-fill-available;
+    width: -moz-available;
+    width: fill;
+  }
+  .cta h1 {
+    padding: 0;
+  }
+  .cta h3 {
+    padding: 0;
+  }
+  footer .footer2 {
+    flex-direction: column;
+  }
+  footer .footer2 span {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
