Адаптировал обе страницы

--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 @import url(breadcrumb.css);
 @import url(../accordeon/acc.css);
+@import url(media.css);
 html {
   overflow-x: hidden;
 }
@@ -190,7 +191,8 @@ header .start__ul {
 .teachnumber2 {
   display: flex;
   justify-content: space-between;
-  padding-top: 120px;
+  padding: 120px 0;
+  flex-wrap: wrap;
 }
 
 .teachnumber__item {
@@ -252,7 +254,23 @@ header .start__ul {
   justify-content: space-around;
 }
 
+.block2-left2 {
+  flex-basis: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: space-around;
+}
+
 .block2__right {
+  flex-basis: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: space-around;
+}
+
+.block2__right2 {
   flex-basis: 500px;
   display: flex;
   flex-direction: column;
@@ -443,12 +461,38 @@ header .start__ul {
   footer {
     padding: 0 2%;
   }
+  .white {
+    padding: 0 2%;
+  }
+  .teachnumber__item {
+    padding-bottom: 20px;
+  }
+  .block2 img {
+    width: 80%;
+  }
+  .block2-left {
+    padding: 0 2%;
+  }
+  .block2-left2 {
+    padding: 0 2%;
+  }
 }
 @media (max-width: 900px) {
-  .block2-left img {
+  .block2-left2 img {
     width: 100%;
   }
+  .teachtext {
+    flex-direction: column;
+  }
+  .teachtext__left {
+    align-items: center;
+  }
   .cta {
+    background-size: 100%;
+    background-repeat: space;
+    margin-bottom: 0;
+  }
+  .cta2 {
     background-size: 100%;
     background-repeat: space;
     margin-bottom: 0;
@@ -461,6 +505,21 @@ header .start__ul {
   }
   .cta__text .btn_y {
     margin-top: 0;
+  }
+  .header__white__text h4 {
+    width: initial;
+  }
+  .header__white__text h2 {
+    width: initial;
+  }
+  header {
+    padding-bottom: 40px;
+  }
+  header ul {
+    flex-wrap: wrap;
+  }
+  .accordion__item {
+    width: initial;
   }
 }
 @media (max-width: 800px) {
@@ -485,17 +544,16 @@ header .start__ul {
     font-size: 30px;
     line-height: 1.1;
   }
-  header {
-    padding-bottom: 40px;
-  }
-  header ul {
-    flex-wrap: wrap;
-  }
   .header__body .middle h2 {
     padding: 0;
   }
   .teachnumber {
     padding: 40px 0 30px;
+    justify-content: center;
+  }
+  .teachnumber2 {
+    padding: 40px 0 30px;
+    justify-content: center;
   }
   .teachtext {
     flex-direction: column;
@@ -516,10 +574,20 @@ header .start__ul {
   .block2-left {
     display: none;
   }
+  .block2-left2 {
+    text-align: center;
+    align-items: center;
+  }
+  .block2__right2 {
+    display: none;
+  }
   .popular {
     padding: 40px 0;
   }
   .cta {
+    padding-bottom: 0;
+  }
+  .cta2 {
     padding-bottom: 0;
   }
   .cta__text {
@@ -531,6 +599,9 @@ header .start__ul {
   }
   .footer__left {
     padding: 0 5%;
+  }
+  .faq {
+    padding-top: 40px;
   }
 }
 @media (max-width: 600px) {
@@ -559,8 +630,26 @@ header .start__ul {
   }
 }
 @media (max-width: 550px) {
+  .header__top img {
+    display: none;
+  }
   .cta {
     background: none;
+  }
+  .cta h1 {
+    padding: 0;
+  }
+  .cta h3 {
+    padding: 0;
+  }
+  .cta2 {
+    background: none;
+  }
+  .cta2 h1 {
+    padding: 0;
+  }
+  .cta2 h3 {
+    padding: 0;
   }
   .cta__text {
     padding: 0;
@@ -570,12 +659,6 @@ header .start__ul {
     width: -webkit-fill-available;
     width: -moz-available;
     width: fill;
-  }
-  .cta h1 {
-    padding: 0;
-  }
-  .cta h3 {
-    padding: 0;
   }
   footer .footer2 {
     flex-direction: column;
