--- a/style/style.scss
+++ b/style/style.scss
@@ -268,10 +268,10 @@ header {
 .courses__block {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    padding: 20px 20px 0;
+    padding: 10px 20px 0;
+    gap: 5px;
     h4 {
-        font-weight: 500;
+        font-weight: 500; 
     }
     img {
         width: 230px;
@@ -378,12 +378,9 @@ header {
     .courses {flex-wrap: wrap; justify-content: center;}
     .cta__text h1 {padding-right: 20%; font-size: 40px; line-height: 1.3;}
     .cta__text h3 {padding-right: 10%;}
-    footer {padding: 0 2%;}
-    .white {padding: 0 2%;}
     .teachnumber__item {padding-bottom: 20px;}
     .block2 img {width: 80%;}
-    .block2-left {padding: 0 2%;}
-    .block2-left2 {padding: 0 2%;}
+    .wrapper {padding: 0 2%;}
 }
 
 @media (max-width: 900px) {
@@ -392,7 +389,7 @@ header {
     .teachtext__left {align-items: center;}
     .cta {background-size: 100%; background-repeat: space; margin-bottom: 0;}
     .cta2 {background-size: 100%; background-repeat: space; margin-bottom: 0;}
-    .cta__text {padding-top: 10px;}
+    .cta__text {padding: 10px 0;}
     .cta h3 {max-width: 300px;}
     .cta__text {
         .btn_y {margin-top: 0;}}
@@ -409,6 +406,8 @@ header {
     .cta h1 {max-width: 300px; flex-wrap: normal;}
     .cta__text {padding-left: 44%; 
                 gap: 2px;
+                justify-content: center;
+                h1 {font-size: 30px;}
     }
 
     .footer__right {flex-wrap: wrap;}
